--- a/res/css/regiserCss.css
+++ b/res/css/regiserCss.css
@@ -1,28 +1,40 @@
 :root {
   --input-padding-x: 1.5rem;
-  --input-padding-y: 0.75rem;
+  --input-padding-y: .75rem;
 }
 
-.login,
-.image {
-  min-height: 100vh;
+body {
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
-.bg-image {
-  background-image: url('https://yt3.ggpht.com/a-/ACSszfH9N5UQ85-Z4FzylTwdbGdVt-LynhiyzfdM0g');
-  background-size: cover;
-  background-position: center;
+.card-signin {
+  border: 0;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
 
-.login-heading {
+.card-signin .card-title {
+  margin-bottom: 2rem;
   font-weight: 300;
+  font-size: 1.5rem;
 }
 
-.btn-login {
-  font-size: 0.9rem;
-  letter-spacing: 0.05rem;
-  padding: 0.75rem 1rem;
-  border-radius: 2rem;
+.card-signin .card-body {
+  padding: 2rem;
+}
+
+.form-signin {
+  width: 100%;
+}
+
+.form-signin .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  transition: all 0.2s;
 }
 
 .form-label-group {
@@ -30,11 +42,14 @@
   margin-bottom: 1rem;
 }
 
+.form-label-group input {
+  height: auto;
+  border-radius: 2rem;
+}
+
 .form-label-group>input,
 .form-label-group>label {
   padding: var(--input-padding-y) var(--input-padding-x);
-  height: auto;
-  border-radius: 2rem;
 }
 
 .form-label-group>label {
@@ -47,8 +62,6 @@
   /* Override default `<label>` margin */
   line-height: 1.5;
   color: #495057;
-  cursor: text;
-  /* Match the input under the label */
   border: 1px solid transparent;
   border-radius: .25rem;
   transition: all .1s ease-in-out;
@@ -85,9 +98,17 @@
   font-size: 12px;
   color: #777;
 }
-.co{
-    color:#253
+
+.btn-google {
+  color: white;
+  background-color: #ea4335;
 }
+
+.btn-facebook {
+  color: white;
+  background-color: #3b5998;
+}
+
 /* Fallback for Edge
 -------------------------------------------------- */
 
