--- a/Views/gondan/member.html
+++ b/Views/gondan/member.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="../../res/bootstrap/bootstrap.min2.css">
 <link rel="stylesheet" type="text/css" href="../../res/css/member.css">
-<script src="js/member.js"></script>
+<script src="../../res/js/member.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
