--- a/Views/ProductionManage/Production.html
+++ b/Views/ProductionManage/Production.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="../../res/bootstrap/bootstrap.min2.css">
   <link rel="stylesheet" type="text/css" href="../../res/css/userpage2.css">
-  <script src="/res/js/userpage2.js"></script>
+  <script src="/res/js/production.js"></script>
   <script src="/res/js/index.js"></script>
 
   <script src="/res/bootstrap/bootstrap.min.js"></script>
@@ -89,7 +89,9 @@
         }
 
       });
+
       sleep(1000);
+
       var machineTable = $('#machineTable').DataTable({
         "searching": false,
         "ordering": false,
@@ -354,7 +356,7 @@
         <thead>
           <tr>
             <td align=" center">
-              <h1>人員</h1>
+              <h1>訂單</h1>
             </td>
 
           </tr>
@@ -376,7 +378,7 @@
         <thead>
           <tr>
             <td align=" center">
-              <h1>機台</h1>
+              <h1>採購單</h1>
             </td>
           </tr>
         </thead>
@@ -397,7 +399,7 @@
         <thead>
           <tr>
             <td align=" center">
-              <h1>刀具</h1>
+              <h1>組裝單</h1>
             </td>
           </tr>
         </thead>
@@ -418,7 +420,7 @@
         <thead>
           <tr>
             <td align=" center">
-              <h1>治具</h1>
+              <h1>加工單(自製)</h1>
             </td>
           </tr>
         </thead>
@@ -439,7 +441,7 @@
         <thead>
           <tr>
             <td align=" center">
-        <h1>原物料</h1>
+        <h1>加工單(外包)</h1>
         </td>
         </tr>
         </thead>
